# fastapi-vegeta-benchmark

./: .gitignore  README.md  plot_results.py  pyproject.toml  run_benchmark.py
app/: __init__.py  main.py
app/db/: __init__.py  engine.py  schema.py
app/endpoints/: __init__.py  bench_endpoints.py  db_endpoints.py  simple_endpoints.py
